------------

 * Added "Link: rel=preconnect" header when using SSL connection and images
   are hosted on a different hostname then delivery (e.g. CDN), in order to
   speed up ad rendering on a page.

 * Added new "addMagicMacros" delivery plugin hook.

 * New displayNameLength configuration directive to increase the length of
   campaign and banner names displayed in the zone linking screens.


Bug Fixes
---------

 * HEAD requests to delivery scripts were previously executed and counted
   as proper requests, even though the ad payload would have been discarded.

 * Fixed issue with the search functionality being case-sensitive when
   using a Postgres database.

 * Optimimized some queries used in the statistics screen, leading to
   faster response times on very large instances.


Non-Backwards Compatible Changes
--------------------------------

 * Revive Adserver now requires at least PHP 8.1


Community Contributions
------------------------

We would like to thank the following community members for their
contribution to this release:

 * zd-ls


System Requirements
-------------------

Before installing, please make sure your server meets the system
requirements, which can be found at:

https://www.revive-adserver.com/support/requirements/


Downloading and Installing
--------------------------

 * Downloading Revive Adserver

   You can always find the latest version of Revive Adserver at:

   https://www.revive-adserver.com.

 * Installing Revive Adserver

   Installing Revive Adserver is a straightforward process. Follow the steps at:

   https://www.revive-adserver.com/how-to/install/

 * Upgrading Revive Adserver

   Upgrading Revive Adserver is a straightforward process. Follow the steps at:

   https://www.revive-adserver.com/how-to/update/

   Please note: The upgrade process will update your Revive Adserver database,
   and the database may no longer be compatible with your old installation.